# easytime

./: .gitignore  .readthedocs.yml  404.html  CONTRIBUTING.md  Features.docx  MakeFile  NOTICE.md  README.md  Time Series Feature Explanations.docx  api_reference.html  build_docs.py  build_utils.py  changelog.html  contributing.html  extreme_metrics_results.json  features_table.py  index.html  m3_analysis_extremes.json  make.bat  mkdocs.yml  mkdocs_prompts.txt  notebook.ipynb  pyproject.toml  requirements.html  requirements.txt  setup.py  sitemap.xml
docs/: api_reference.md  build_docs.py  changelog.md  conduct.md  conf.py  contributing.md  index.md  mkdocs.yml  notebook.ipynb  notebook.md  requirements.md  requirements.txt  test_output.html
easytime/: metrics.py
easyts/: __init__.py  metrics.py
ete_ts/: metrics.py
examples + more info/: AirPassanger_Notebook.ipynb  extreme_metrics_results.json
features/: ac.html  ac_relevance.html  centroid.html  complexity.html  diff_series.html  entropy_pairs.html  fluctuation.html  forecastability.html  linear_regression.html  median_crosses.html  rec_concentration.html  seasonal_strength.html  st_variation.html  trend_changes.html  trend_strength.html  window_fluctuation.html
search/: search_index.json
site/: 404.html  MakeFile  api_reference.html  changelog.html  conduct.html  contributing.html  index.html  notebook.html  notebook.ipynb  requirements.html  sitemap.xml
src/: MD_hrv.c  MD_hrv.h  SB_CoarseGrain.c  SB_MotifThree.c  SB_MotifThree.exp  SB_MotifThree.lib  __init__.py  metrics.py  test_metrics.py
(+110 files in other folders)
